styling layout, setting homepage text for services and presentation. adding CGU

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -42,6 +42,8 @@
 
   transition: all 300ms ease-in-out;
 
+  box-shadow: var(--box-shadow);
+
   & div {
     display: flex;
     justify-content: space-between;
