--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -6,6 +6,10 @@
   justify-content: flex-end;
   padding: 0 2rem;
 
+  @media screen and (max-width: 800px) {
+    display: none;
+  }
+
   & ul {
     display: flex;
     align-items: center;
@@ -29,7 +33,7 @@
   }
 }
 
-.nav-bar {
+.nav-bar-desktop {
   z-index: 10;
   top: 0;
   position: sticky;
@@ -77,14 +81,45 @@
   }
 }
 
+.nav-bar-mobile {
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+  z-index: 100;
+}
+
+.nav-bar-mobile-hamburger {
+  background-color: var(--primary-color);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.423);
+  border-radius: 0.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+}
+
 .main {
-  min-height: 100vh;
+  min-height: 90vh;
 }
 
 .footer {
+  background-color: var(--background-dark);
+  color: #e7e7e7;
   display: flex;
   flex: 1;
   padding: 2rem 0;
   justify-content: center;
   align-items: center;
+
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+  }
+
+  & * {
+    margin: 0 0.25rem;
+  }
+
+  & a {
+    color: var(--secondary-color);
+  }
 }
