--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -9,36 +9,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
 
-.presentation {
-  max-width: 1280px;
-  margin: 2rem auto;
-
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-
-  & h2 {
-    text-transform: uppercase;
-    font-size: x-large;
-    font-weight: bold;
-  }
-}
-
-.presentation-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  background-color: var(--primary-color);
-  border-radius: 100%;
-  padding: 1.15rem;
-
-  & img {
-    height: 3rem;
-  }
+  color: #f7f7f7;
 }
 
 .services {
@@ -82,9 +54,17 @@
     align-items: center;
 
     &:hover {
+      & svg {
+        fill: var(--primary-color);
+      }
+
       & h3 {
         text-decoration: underline;
       }
+    }
+
+    & svg {
+      transition: all 150ms linear;
     }
 
     & h3 {
@@ -93,6 +73,64 @@
       text-transform: uppercase;
       font-size: large;
       font-weight: bold;
+      transition: all 150ms linear;
+    }
+  }
+}
+
+.presentation {
+  max-width: 1280px;
+  margin: 2rem auto;
+
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  & h2 {
+    text-transform: uppercase;
+    font-size: x-large;
+    font-weight: bold;
+  }
+}
+
+.presentation-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: var(--primary-color);
+  border-radius: 100%;
+  padding: 1.15rem;
+
+  & img {
+    height: 3rem;
+  }
+}
+
+.presentation-zone {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem 2rem;
+
+  & p {
+    width: 50%;
+  }
+
+  & iframe {
+    & * {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  @media screen and(max-width: 800px) {
+    flex-direction: column;
+
+    & p {
+      width: 100%;
     }
   }
 }
