--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -86,6 +86,10 @@
   top: 1rem;
   right: 1rem;
   z-index: 100;
+
+  @media screen and (min-width: 800px) {
+    display: none;
+  }
 }
 
 .nav-bar-mobile-hamburger {
