--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,11 @@
   src: url("/assets/fonts/OpenSans-Regular.ttf");
 }
 
-html,
+html {
+  overflow: hidden;
+  width: 100%;
+}
+
 body {
   scroll-behavior: smooth;
   padding: 0;
@@ -14,6 +18,10 @@ body {
   background-color: #eeeeee;
 
   width: 100%;
+  height: 100%;
+  position: fixed;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 :root {
