--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -14,6 +14,10 @@
   @media screen and (max-width: 800px) {
     margin-top: 0;
   }
+
+  & h1 {
+    font-size: 8rem;
+  }
 }
 
 .services {
@@ -60,11 +64,12 @@
 
     &:hover {
       & svg {
-        fill: var(--primary-color);
+        fill: var(--secondary-color);
       }
 
       & h3 {
         text-decoration: underline;
+        color: var(--secondary-color);
       }
     }
 
