--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,11 +3,7 @@
   src: url("/assets/fonts/OpenSans-Regular.ttf");
 }
 
-html {
-  overflow: hidden;
-  width: 100%;
-}
-
+html,
 body {
   scroll-behavior: smooth;
   padding: 0;
@@ -19,9 +15,6 @@ body {
 
   width: 100%;
   height: 100%;
-  position: fixed;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
 }
 
 :root {
