--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -84,6 +84,8 @@
 }
 
 .nav-bar-mobile {
+  width: 100%;
+
   @media screen and (min-width: 800px) {
     display: none;
   }
@@ -98,10 +100,11 @@
   align-items: center;
   padding: 0.5rem;
 
-  position: fixed;
-  top: 1rem;
-  right: 1rem;
   z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .nav-bar-mobile-content {
