--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,6 +5,8 @@
 
 html,
 body {
+  width: 100vw;
+  height: 100vh;
   scroll-behavior: smooth;
   padding: 0;
   margin: 0;
@@ -12,9 +14,6 @@ body {
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   background-color: #eeeeee;
-
-  width: 100%;
-  height: 100%;
 }
 
 :root {
