--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -84,7 +84,8 @@
 }
 
 .nav-bar-mobile {
-  width: 100%;
+  // max-width: 100vw;
+  // height: 100%;
 
   @media screen and (min-width: 800px) {
     display: none;
@@ -103,7 +104,8 @@
   z-index: 1000;
   position: fixed;
   top: 0;
-  left: 0;
+  // left: 0;
+  // bottom: 0;
   right: 0;
 }
 
@@ -120,6 +122,7 @@
 
 .main {
   min-height: 90vh;
+  overflow-x: hidden;
 }
 
 .footer {
