--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -11,6 +11,12 @@
 
   color: #f7f7f7;
 
+  overflow-x: hidden;
+
+  max-width: 100vw;
+
+  width: 100%;
+
   @media screen and (min-width: 800px) {
     margin-top: -6.3rem;
   }
@@ -25,6 +31,7 @@
 }
 
 .services {
+  overflow-x: hidden;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -33,7 +40,10 @@
   background-color: var(--background-dark);
   color: #f7f7f7;
 
+  width: 100%;
+
   & div {
+    width: 100%;
     max-width: 1280px;
     margin: 2rem auto;
 
@@ -93,6 +103,7 @@
 }
 
 .presentation {
+  overflow-x: hidden;
   max-width: 1280px;
   margin: 2rem auto;
 
