--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -1,4 +1,5 @@
 .hero {
+  z-index: 100;
   height: 78vh;
   margin-top: 0;
   background: url("/assets/imgs/hero-cover-min.jpg") center 80% / cover fixed;
@@ -11,11 +12,9 @@
 
   color: #f7f7f7;
 
-  overflow-x: hidden;
+  // overflow-x: hidden;
 
-  max-width: 100vw;
-
-  width: 100%;
+  // width: 100%;
 
   @media screen and (min-width: 800px) {
     margin-top: -6.3rem;
