--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,6 +14,8 @@ body {
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   background-color: #eeeeee;
+
+  overflow-x: hidden;
 }
 
 :root {
