--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -44,6 +44,9 @@
   justify-content: center;
   align-items: center;
 
+  overflow-x: hidden;
+  width: 100%;
+
   transition: all 300ms ease-in-out;
 
   box-shadow: var(--navbar-box-shadow);
@@ -115,10 +118,20 @@
   right: 0;
   bottom: 0;
 
-  background-color: red;
+  background-color: var(--background-dark);
   z-index: 100;
 
   overflow: hidden;
+
+  color: #e7e7e7;
+  font-size: x-large;
+
+  & ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
 }
 
 .fadeOut {
@@ -134,6 +147,7 @@
 
 .main {
   min-height: 90vh;
+  width: 100%;
   // overflow-x: hidden;
 }
 
