--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -12,9 +12,9 @@
 
   color: #f7f7f7;
 
-  // overflow-x: hidden;
+  overflow-x: hidden;
 
-  // width: 100%;
+  width: 100%;
 
   @media screen and (min-width: 800px) {
     margin-top: -6.3rem;
