adding contact grid

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,7 +6,7 @@
 html,
 body {
   width: 100vw;
-  height: 100vh;
+  // height: 100vh;
   scroll-behavior: smooth;
   padding: 0;
   margin: 0;
@@ -15,7 +15,7 @@ body {
 
   background-color: #eeeeee;
 
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 :root {
