--- a/styles/pages/Contact.module.scss
+++ b/styles/pages/Contact.module.scss
@@ -20,6 +20,8 @@
   grid-template-columns: 1fr;
   grid-gap: 2rem;
 
+  margin-bottom: 5rem;
+
   @media screen and (min-width: 800px) {
     grid-template-columns: repeat(3, 1fr);
   }
