--- a/styles/pages/Maconnerie.module.scss
+++ b/styles/pages/Maconnerie.module.scss
@@ -1,6 +1,7 @@
 .hero {
+  overflow: hidden;
   z-index: 100;
-  height: 78vh;
+  height: 50vh;
   max-height: 85rem;
   margin-top: 0;
   background: url("/assets/imgs/masonry.jpg") center 80% / cover fixed;
@@ -16,10 +17,6 @@
   overflow-x: hidden;
 
   width: 100%;
-
-  @media screen and (min-width: 800px) {
-    margin-top: -6.3rem;
-  }
 
   & h1 {
     font-size: 3rem;
