--- a/src/styles/pages/Contact.module.scss
+++ b/src/styles/pages/Contact.module.scss
@@ -8,10 +8,14 @@
 
   & h1 {
     margin-top: 5rem;
-    font-size: xx-large;
+    font-size: larger;
     font-weight: bold;
 
     text-align: center;
+
+    @media screen and (min-width: 800px) {
+      font-size: xx-large;
+    }
   }
 }
 
