--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -158,7 +158,10 @@
 .main {
   min-height: 55vh;
   width: 100%;
-  // overflow-x: hidden;
+
+  @media screen and (max-width: 800px) {
+    overflow-x: hidden;
+  }
 }
 
 .footer {
