add amenagement pages

--- a/src/styles/pages/Maconnerie.module.scss
+++ b/src/styles/pages/Maconnerie.module.scss
@@ -4,7 +4,8 @@
   height: 55vh;
   max-height: 85rem;
   margin-top: 0;
-  background: url("/assets/imgs/masonry.webp") center 80% / cover fixed;
+  background: url("/assets/imgs/maconnerie/masonry_hero.webp") center 80% /
+    cover fixed;
   filter: brightness(0.75);
   -webkit-filter: brightness(0.75);
 
